# docs/swagger.yaml
@@ -1,30 +1,3 @@
-definitions:
-  jsn.Remote:
-    properties:
-      address:
-        type: string
-      apps:
-        items:
-          $ref: '#/definitions/jsn.RemoteApp'
-        type: array
-      name:
-        type: string
-      status:
-        type: boolean
-    type: object
-  jsn.RemoteApp:
-    properties:
-      apptype:
-        type: string
-      name:
-        type: string
-      path:
-        type: string
-      service:
-        type: string
-      status:
-        type: boolean
-    type: object
 info:
   contact:
     name: PANKAJ KUMAR
@@ -66,10 +39,37 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok
+          description: '{"ok":"string", "msg": "string", "data": ""}'
           schema:
-            $ref: '#/definitions/jsn.Remote'
+            type: string
       summary: searching remote by name
+      tags:
+      - Patch
+  /api/remote/{name}/rights:
+    get:
+      consumes:
+      - application/json
+      description: getting remote rights of read/write
+      parameters:
+      - description: Remote Name
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: Remote Apps
+        in: query
+        items:
+          type: string
+        name: apps
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"ok":"string", "msg": "string", "data": ""}'
+          schema:
+            type: string
+      summary: getting remote rights of read/write
       tags:
       - Patch
   /api/remotes:
@@ -81,11 +81,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok
+          description: '{"ok":"string", "msg": "string", "data": ""}'
           schema:
-            items:
-              $ref: '#/definitions/jsn.Remote'
-            type: array
+            type: string
       summary: getting all available remotes
       tags:
       - Patch
@@ -93,17 +91,15 @@ paths:
     get:
       consumes:
       - application/json
-      description: getting remote rights of read/write
+      description: getting remotes rights of read/write
       produces:
       - application/json
       responses:
         "200":
-          description: ok
+          description: '{"ok":"string", "msg": "string", "data": ""}'
           schema:
-            items:
-              $ref: '#/definitions/jsn.Remote'
-            type: array
-      summary: getting remote rights of read/write
+            type: string
+      summary: getting remotes rights of read/write
       tags:
       - Patch
 swagger: "2.0"
